--- a/lessons/lesson4/data/1_Modules.ipynb
+++ b/lessons/lesson4/data/1_Modules.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we scroll down tot he first example, we see that they use a function called `arange` to create an array."
+    "If we scroll down to the first example in the quickstart tutorial, we see that they use a function called `arange` to create an array."
    ]
   },
   {
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What happens when we do math on arrays?"
+    "What happens when we do math on numpy arrays?"
    ]
   },
   {
@@ -354,6 +354,13 @@
     "norm = np.random.standard_normal(1000) # Draw 1000 random points from normal distribution\n",
     "hist, bins = np.histogram(norm, density=True) # Make histogram of our samples\n",
     "plt.plot(bins[1:], hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a brief overview of `numpy` and `matplotlib`. This should be a good basis for getting starting manipulating and plotting data in Python. Remember, Google and documentation are your friends!"
    ]
   }
  ],
