--- a/lessons/lesson4/data/2_Loops.ipynb
+++ b/lessons/lesson4/data/2_Loops.ipynb
@@ -8,7 +8,7 @@
     "Loops are useful programming concepts that allow for a block of logic to be repeated multiple times. Python has two types of loops. They can both accomplish the same things, but are used in different scenarios.\n",
     "\n",
     "## For loop\n",
-    "A for loop loops through each element in a collection of objects, generally with the intent of doing something to each object. Like everything else in Python, loops act on an indented block of code, repeating everything in that indent until the end condition. In for loops, the end condition is when the end of the collection is reached.\n",
+    "A for loop loops through each element in a collection of objects, generally with the intent of doing something to each object. In Python, loops act on an indented block of code, repeating everything in that indent until the end of the collection is reached.\n",
     "\n",
     "A useful built-in function for loops is `range()`. Range makes a sequence of integers from 0 up to the number you supply."
    ]
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10): #loop through numbers 0 to 9\n",
+    "for i in range(10): # Loop through numbers 0 to 9\n",
     "    print(i)"
    ]
   },
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "for i in range(10):\n",
-    "    # We can use x in the indented block of our loop\n",
+    "    # We can use i in the indented block of our loop\n",
     "    if i < 5:\n",
     "        print(x)"
    ]
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `range()` function is useful for getting a list of indices, hence the convention to use `i` as the iterator variable. If you supply the length of a list or array, etc to `range()`, you will get each index of that array, one by one."
+    "The `range()` function is useful for getting a list of indices, hence the convention to use `i` (for index) as the iterator variable. If you supply the length of a list or array, etc to `range()`, you will get each index of that array, one by one."
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also loop directly through the values of a collection by supplying that collection to the for loop."
+    "We can also loop directly through the values of a collection by supplying that collection to the **for loop**."
    ]
   },
   {
