Fix yet another typo

--- a/lessons/lesson4/data/2_Loops.ipynb
+++ b/lessons/lesson4/data/2_Loops.ipynb
@@ -32,7 +32,7 @@
     "for i in range(10):\n",
     "    # We can use i in the indented block of our loop\n",
     "    if i < 5:\n",
-    "        print(x)"
+    "        print(i)"
    ]
   },
   {
